update global gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,5 @@ CloudentalTDD/.project
 CloudentalTDD/.classpath
 CloudentalTDD/.directory
 CloudentalTDD/.settings/
+CloudentalTDD/bin/
+CloudentalUtils/bin/
