fix for deploying manually to Glassfish. Version is not included in war, jar of produced ear

--- a/Cloudental-ear/pom.xml
+++ b/Cloudental-ear/pom.xml
@@ -33,6 +33,7 @@
                 <configuration>
                     <version>6</version>
                     <defaultLibBundleDir>lib</defaultLibBundleDir>
+                    <fileNameMapping>no-version</fileNameMapping>
                 </configuration>
             </plugin>
 	    <plugin>
