Fix problem with compile in Maven build

--- a/Cloudental-ejb/pom.xml
+++ b/Cloudental-ejb/pom.xml
@@ -80,6 +80,12 @@
 			<version>2.0.2</version>
 			<scope>provided</scope>
 		</dependency>
+		<!-- constrains validator -->
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>4.3.0.Final</version>
+		</dependency>
 	</dependencies>
 
 	<build>
