--- a/Cloudental-ejb/pom.xml
+++ b/Cloudental-ejb/pom.xml
@@ -84,7 +84,8 @@
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-validator</artifactId>
-			<version>4.3.0.Final</version>
+			<version>4.0.2.GA</version>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 
