--- a/Cloudental-web/src/main/webapp/WEB-INF/web.xml
+++ b/Cloudental-web/src/main/webapp/WEB-INF/web.xml
@@ -36,4 +36,8 @@
   <listener>
     <listener-class>com.sun.faces.config.ConfigureListener</listener-class>
   </listener>
+  <context-param>
+    <param-name>javax.faces.FACELETS_LIBRARIES</param-name>
+	<param-value>/WEB-INF/cde.taglib.xml</param-value>  
+  </context-param>
 </web-app>
