--- a/Cloudental-web/src/main/webapp/WEB-INF/web.xml
+++ b/Cloudental-web/src/main/webapp/WEB-INF/web.xml
@@ -40,4 +40,9 @@
     <param-name>javax.faces.FACELETS_LIBRARIES</param-name>
     <param-value>/WEB-INF/cde.taglib.xml</param-value>
   </context-param>
+    <context-param>
+    <param-name>javax.faces.PROJECT_STAGE</param-name>
+    <param-value>development</param-value>
+  </context-param>
+  
 </web-app>
