--- a/Cloudental-cdi/pom.xml
+++ b/Cloudental-cdi/pom.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
@@ -8,6 +9,9 @@
 		<relativePath>..</relativePath>
 	</parent>
 	<artifactId>Cloudental-cdi</artifactId>
+    <packaging>war</packaging>
+    <name>Cloudental-cdi</name>
+
 	<dependencies>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
@@ -125,5 +129,4 @@
 			<layout>default</layout>
 		</repository>
 	</repositories>
-	<packaging>war</packaging>
 </project>
