--- a/Cloudental-cdi/src/main/webapp/WEB-INF/web.xml
+++ b/Cloudental-cdi/src/main/webapp/WEB-INF/web.xml
@@ -20,9 +20,8 @@
   <listener>
     <listener-class>com.sun.faces.config.ConfigureListener</listener-class>
   </listener>
-  <context-param>
-    <description>State saving method: 'client' or 'server' (=default). See JSF Specification 2.5.2</description>
-    <param-name>javax.faces.STATE_SAVING_METHOD</param-name>
-    <param-value>client</param-value>
+  <context-param>  
+    <param-name>primefaces.THEME</param-name>  
+    <param-value>cupertino</param-value>  
   </context-param>
 </web-app>
