--- a/Cloudental-cdi/src/main/webapp/WEB-INF/web.xml
+++ b/Cloudental-cdi/src/main/webapp/WEB-INF/web.xml
@@ -24,4 +24,8 @@
     <param-name>primefaces.THEME</param-name>  
     <param-value>cupertino</param-value>  
   </context-param>
+  <context-param>
+    <param-name>javax.faces.PROJECT_STAGE</param-name>
+    <param-value>Development</param-value>
+  </context-param>  
 </web-app>
