--- a/Cloudental-ear/pom.xml
+++ b/Cloudental-ear/pom.xml
@@ -70,7 +70,7 @@
         </dependency>
         <dependency>
             <groupId>com.mpdmal.cloudental</groupId>
-            <artifactId>Cloudental-web</artifactId>
+            <artifactId>Cloudental-cdi</artifactId>
             <version>1.0-SNAPSHOT</version>
             <type>war</type>
         </dependency>
