1. New Login Screen !!!! 2. Login service is now request scoped and uses office    reception on session, sets loggedIn state 3. Renamed officeState to officeReception, session scoped , 	keeps user id and loggedIn state 4. crateBean renamed to createUserService (@Named) 5. Added 3 new logo images 6. crated xhtml officeReception 7. added navigation rule to receptino area 8. added css login styles 9. changed prime-faces skin to south-street! 10. removed random import on DentistBean

--- a/Cloudental-cdi/pom.xml
+++ b/Cloudental-cdi/pom.xml
@@ -43,7 +43,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.primefaces.themes</groupId>
-			<artifactId>cupertino</artifactId>			
+			<artifactId>south-street</artifactId>			
 			<version>1.0.2</version>
 		</dependency>
 	</dependencies>
