--- a/Cloudental-cdi/src/main/webapp/WEB-INF/web.xml
+++ b/Cloudental-cdi/src/main/webapp/WEB-INF/web.xml
@@ -22,7 +22,7 @@
   </listener>
   <context-param>  
     <param-name>primefaces.THEME</param-name>  
-    <param-value>cupertino</param-value>  
+    <param-value>south-street</param-value>  
   </context-param>
   <context-param>
     <param-name>javax.faces.PROJECT_STAGE</param-name>
