added rome 9.0 dependency - XML parsing for primefaces RSS feedReader added css files per page. went over patient, reception and scheduler screens

--- a/Cloudental-cdi/pom.xml
+++ b/Cloudental-cdi/pom.xml
@@ -46,6 +46,11 @@
 			<artifactId>south-street</artifactId>			
 			<version>1.0.2</version>
 		</dependency>
+		<dependency>
+      		<groupId>rome</groupId>
+      		<artifactId>rome</artifactId>
+      		<version>0.9</version>
+    	</dependency>
 	</dependencies>
 	<build>
 		<plugins>
