--- a/Cloudental-cdi/pom.xml
+++ b/Cloudental-cdi/pom.xml
@@ -51,6 +51,22 @@
       		<artifactId>rome</artifactId>
       		<version>0.9</version>
     	</dependency>
+    	<dependency>
+    		<groupId>com.sun.jersey</groupId>
+    		<artifactId>jersey-server</artifactId>
+    		<version>1.13</version>
+		</dependency>
+		<dependency>
+    		<groupId>com.sun.jersey</groupId>
+    		<artifactId>jersey-client</artifactId>
+    		<version>1.13</version>
+		</dependency>
+		<dependency>
+    		<groupId>com.sun.jersey.jersey-test-framework</groupId>
+    		<artifactId>jersey-test-framework-grizzly</artifactId>
+    		<version>1.13</version>
+    		<scope>test</scope>
+		</dependency>    	
 	</dependencies>
 	<build>
 		<plugins>
