--- a/Cloudental-cdi/pom.xml
+++ b/Cloudental-cdi/pom.xml
@@ -28,12 +28,12 @@
 		<dependency>
 			<groupId>org.primefaces</groupId>
 			<artifactId>primefaces</artifactId>
-			<version>3.1.1</version>
+			<version>3.4.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.primefaces</groupId>
-			<artifactId>mobile</artifactId>
-			<version>0.9.1</version>
+			<artifactId>primefaces-mobile</artifactId>
+			<version>0.9.3</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.myfaces.extensions.cdi.bundles</groupId>
