--- a/Cloudental-cdi/src/main/webapp/WEB-INF/web.xml
+++ b/Cloudental-cdi/src/main/webapp/WEB-INF/web.xml
@@ -23,10 +23,11 @@
     <servlet-name>Jersey Servlet</servlet-name>
     <url-pattern>/cloudental/rest/*</url-pattern>
   </servlet-mapping>
-  <context-param>
-    <param-name>javax.servlet.jsp.jstl.fmt.localizationContext</param-name>
-    <param-value>resources.application</param-value>
-  </context-param>
+  <servlet>
+    <servlet-name>Reports Servlet</servlet-name>
+    <servlet-class>com.mpdmal.cloudental.web.reporting.ReportsServlet</servlet-class>
+    <load-on-startup>1</load-on-startup>
+  </servlet>
   <listener>
     <listener-class>com.sun.faces.config.ConfigureListener</listener-class>
   </listener>
