--- a/Cloudental-ejb/pom.xml
+++ b/Cloudental-ejb/pom.xml
@@ -108,6 +108,12 @@
 			<version>4.0.2.GA</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+        	<groupId>net.sf.jasperreports</groupId>
+        	<artifactId>jasperreports</artifactId>
+        	<version>4.7.1</version>
+    	</dependency>
+		
 	</dependencies>
 
 	<build>
