Reception UI and services 3.a added user preferences 	theme 	visit view on scheduler 	scheduler start time 	scheduler min time 	scheduler max time 	scheduler slotmins 	daily reports 	email notificaitons 	email content   b. merged with peferences   c.drop feed for now

--- a/Cloudental-cdi/pom.xml
+++ b/Cloudental-cdi/pom.xml
@@ -47,6 +47,11 @@
 			<version>1.0.8</version>
 		</dependency>
 		<dependency>
+			<groupId>org.primefaces.themes</groupId>
+			<artifactId>redmond</artifactId>			
+			<version>1.0.8</version>
+		</dependency>
+		<dependency>
       		<groupId>rome</groupId>
       		<artifactId>rome</artifactId>
       		<version>0.9</version>
