--- a/Cloudental-cdi/src/main/webapp/WEB-INF/web.xml
+++ b/Cloudental-cdi/src/main/webapp/WEB-INF/web.xml
@@ -32,8 +32,8 @@
     <listener-class>com.sun.faces.config.ConfigureListener</listener-class>
   </listener>
   <context-param>  
-    <param-name>primefaces.THEME</param-name>  
-    <param-value>cupertino</param-value>  
+        <param-name>primefaces.THEME</param-name>  
+        <param-value>#{officeReception.theme}</param-value>  
   </context-param>
   <context-param>
     <param-name>javax.faces.PROJECT_STAGE</param-name>
