--- a/Cloudental-cdi/src/main/webapp/WEB-INF/web.xml
+++ b/Cloudental-cdi/src/main/webapp/WEB-INF/web.xml
@@ -43,4 +43,12 @@
     <param-name>javax.faces.FACELETS_LIBRARIES</param-name>
     <param-value>/WEB-INF/cde.taglib.xml</param-value>
   </context-param>
+  <context-param>
+	<param-name>primefaces.PRIVATE_CAPTCHA_KEY</param-name>
+	<param-value>6LdAttoSAAAAAE0FchffDnlnsQ0ANIU2j1XE7H0y</param-value>
+  </context-param>
+  <context-param>
+	<param-name>primefaces.PUBLIC_CAPTCHA_KEY</param-name>
+	<param-value>6LdAttoSAAAAAMuvFvQn0Nx6ckHelob9yfc2Sw6q</param-value>
+  </context-param>  
 </web-app>
